--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Django==3.1.4
 idna==2.10
 joblib==1.0.0
 numpy==1.19.4
-pandas==1.2.0
+pandas==1.0.0
 psycopg2==2.8.6
 python-dateutil==2.8.1
 pytz==2020.5
@@ -16,4 +16,5 @@ six==1.15.0
 sqlparse==0.4.1
 threadpoolctl==2.1.0
 urllib3==1.26.2
-uWSGI==2.0.19.1
+waitress==2.0.0
+whitenoise==5.2.0
